--- a/.github/workflows/Issue-Closer.yaml
+++ b/.github/workflows/Issue-Closer.yaml
@@ -2,6 +2,8 @@ name: Close Invalid Issues
 on:
   issues:
     types: [opened, edited]
+  schedule: 
+    - cron: "*/5 * * * *"
 
 jobs:
   close_invalid_issues:
