--- a/.github/workflows/Issue-Closer.yaml
+++ b/.github/workflows/Issue-Closer.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   close_invalid_issues:
-    runs-on: [self-hosted, SoulPi_ARM64]
+    runs-on: self-hosted
     steps:
       - uses: actions/github-script@v7
         with:
